# REASONBORN

./: .gitignore  README.md  ReasonBorn.md  pyproject.toml  requirements.txt
.agent/workflows/: deploy-amd.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd-deploy-api.yml  ci-pipeline.yml  nightly-benchmarks.yml
configs/: proxy_100M.yaml
configs/continual_learning/: dp_sgd_config.yaml  ewc_config.yaml
configs/system_prompts/: edge_device.json  medical_restricted.json  public_api.json  research_mode.json
configs/training/: alignment.yaml  domain_finetuning.yaml  pretraining.yaml
deploy/: Dockerfile
deploy/edge/: edge_deploy.py  optimize_quantization.py
deploy/kubernetes/: hpa.yaml  pvc_storage.yaml  server_deploy.yaml
docs/: architecture.md  patent_claims.md  system_prompts.md
scripts/data/: prepare_pretraining_data.py
scripts/deploy/: boot_rocm.sh  verify_hardware.sh
scripts/evaluation/: evaluate.py  evaluate_calibration.py  evaluate_continual_learning.py  evaluate_hallucination.py  evaluate_reasonborn.sh  evaluate_safety.py
scripts/inference/: continual_update_example.py  inference_example.py
scripts/proxy/: generate_synthetic_proxy_data.py  rbridge_evaluator.py  run_proxy_pipeline.sh  train_proxy_mi300x.py
scripts/training/: alignment_training.py  finetune_domain.py  train.py  train_reasonborn.sh
src/reasonborn/: __init__.py  (+1 more)
tests/: test_dp_accounting.py  test_ewc_retention.py  test_hybrid_attention.py  test_moe_routing.py  test_nested_cot.py  test_symbolic_verifier.py  test_system_prompts.py
(+37 files in other folders)
